# rusterizer

./: Cargo.toml
rusterizer/: Cargo.toml
rusterizer/src/: camera.rs  color.rs  geometry.rs  lib.rs  texture.rs  transform.rs  utils.rs
src/: color.rs  geometry.rs  main.rs  texture.rs  utils.rs
window/: .gitignore  Cargo.toml
window/shared/: Cargo.toml
window/shared/src/: camera.rs  lib.rs  mesh.rs  texture.rs  transform.rs
window/src/: main.rs  reload.rs
