[package]
name = "rusterizer-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
glam = "*"
stb_image = "*"
libloading = "0.7.4"
shared = { path = "shared", features = ["export"] }
